<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:layout_margin="@dimen/marginM"
    android:orientation="vertical">

    <Switch
    android:id="@+id/lockDeviceCheck"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:text="@string/lockDevice" />

    <TextView
        android:id="@+id/deviceAdminTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceAdminDisabledTip" />

    <Button
        android:id="@+id/enableDeviceAdminBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:onClick="enabledAdmin"/>

</LinearLayout>