<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/appPadding">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_jumbo"
        style="@style/Header"/>
    <TextView
        android:id="@+id/welcome_subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_header"
        android:text="@string/final_secondary"
        style="@style/Subheader"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_subheader"
        android:src="@drawable/moe"
        android:scaleType="fitStart"/>

    <ProgressBar
        android:id="@+id/submitProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextBtn"
        android:layout_margin="@dimen/marginS"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/PrimaryButtonNoAction"
        android:text="@string/finish"
        android:onClick="upload"/>

    <!-- END    : Your code should be within this block -->

</RelativeLayout>
